fixed tth letter spacing for mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -151,7 +151,7 @@ h5 {
     }
 
     #tth {
-        letter-spacing: -5px;
+        letter-spacing: -7px;
     }
 
 }
